--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
   sqflite_common_ffi: ^2.3.2+1
+  url_launcher: ^6.2.5
   webview_flutter: ^4.7.0
 
 
@@ -52,6 +53,7 @@ dependencies:
 
 
 
+  crypto: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
