icons added and name changed to 'Anokha 2024'

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </intent>
     </queries>
     <application
-        android:label="anokha"
+        android:label="Anokha 2024"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
